# kaba

./: .gitignore  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md
.github/workflows/: kaba.yml  release.yml  rust.yml  test.yml
assembler/: Cargo.toml
assembler/src/: assembler.rs  bytecode.rs  grammar.pest  lib.rs  parser.rs  testutils.rs
assembler/src/grammar/: kaba-asm.pest
builtin/: Cargo.toml
builtin/src/: functions.rs  lib.rs  types.rs
compiler/: Cargo.toml  README.md
compiler/src/: ast.rs  compiler.rs  error.rs  lexer.rs  lib.rs  parser.rs  semantic.rs  types.rs  util.rs
compiler/src/lexer/: error.rs  token.rs
compiler/src/parser/: block.rs  conditional.rs  each_loop.rs  error.rs  expression.rs  function.rs  statement.rs  stream.rs  test_util.rs  tn.rs  variable.rs  while_loop.rs
compiler/src/semantic/: assignment.rs  body.rs  builtin_functions.rs  conditional.rs  context.rs  each_loop.rs  error.rs  expression.rs  function.rs  literal.rs  scope.rs  state.rs  statement.rs  test_util.rs  tn.rs  types.rs  variable.rs  while_loop.rs
compiler/src/types/: body.rs  context.rs  error.rs  expression.rs  function.rs  scope.rs  statement.rs
docs/: build.md  features.md
docs/examples/: README.md  fibonacci.kaba  hello_world.kaba  odd_numbers.kaba  print_array.kaba  swap_variables.kaba
kaba/: Cargo.toml
kaba/src/: error.rs  main.rs
kaba/src/cmd/: run.rs
kaba2js/: Cargo.toml
kaba2js/src/: lib.rs  wasm.rs
kaba_2js/: Cargo.toml
kaba_2js/src/: lib.rs
kaba_compiler/: Cargo.toml
kaba_compiler/src/: ast.rs  error.rs  lib.rs  parser.rs  semantic.rs
kaba_compiler/src/lexer/: error.rs  rule.rs  token.rs
kaba_compiler/src/parser/: block.rs  conditional.rs  each_loop.rs  error.rs  expression.rs  function.rs  record.rs  state.rs  statement.rs  sym.rs  test_util.rs  tn.rs  variable.rs  while_loop.rs
kaba_compiler/src/semantic/: assignment.rs  body.rs  conditional.rs  each_loop.rs  error.rs  expression.rs  function.rs  literal.rs  record.rs  state.rs  statement.rs  test_util.rs  tn.rs  typ.rs  types.rs  variable.rs  while_loop.rs
kaba_runtime_prototype/: Cargo.toml
kaba_runtime_prototype/src/: runtime.rs
kaba_runtime_prototype/src/runtime/: assignment.rs  body.rs  expression.rs  state.rs  statement.rs  value.rs
kabac/: Cargo.toml  README.md
kabac/src/: ast.rs  compiler.rs  error.rs  lexer.rs  lib.rs  parser.rs  semantic.rs
kabac/src/lexer/: error.rs  rule.rs  token.rs
kabart_p/: Cargo.toml
kabart_p/src/: runtime.rs
src/: README.md  ast.rs  cli.rs  cmd.rs  kaba.pest  lexer.rs  lib.rs  main.rs  parser.rs  runtime.rs
src/cmd/: run.rs
src/runtime/: assignment.rs  body.rs  error.rs  expression.rs  flags.rs  state.rs  statement.rs  stream.rs  value.rs
tests/data/: swap_variables.kaba
(+65 files in other folders)
