[workspace]
members = ["builtin", "compiler"]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
authors = ["Hafidh Muqsithanova Sukarno <hafidhmn@gmail.com>"]

[package]
name = "kaba"
description = "Kaba programming language"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
colored = "2.1.0"
compiler = { path = "./compiler" }
indoc = "2.0.4"
