[workspace]
members = ["compiler"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Hafidh Muqsithanova Sukarno <hafidhmn@gmail.com>"]

[package]
name = "kaba"
description = "Kaba programming language"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
compiler = { path = "./compiler" }

[dev-dependencies]
indoc = "2.0.4"
