[workspace]
members = ["compiler"]
resolver = "2"

[workspace.package]
version = "0.5.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Hafidh Muqsithanova Sukarno <hafidhmn@gmail.com>"]
rust-version = "1.81"

[package]
name = "kaba"
description = "Kaba programming language"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
compiler = { path = "./compiler" }
indoc = "2.0.4"
