[package]
name = "kaba_2js"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
kaba_compiler = { path = "../kaba_compiler" }
wasm-bindgen = "0.2"

[dev-dependencies]
indoc = "2.0.4"
